  9393ef79 Much faster uncertainty computation

2024-10-31 Added traverse_sensor_links() in C and Python and the min-heap
  added heap.h
  added mrcal_traverse_sensor_links()
  added mrcal.traverse_sensor_links()

2024-11-06 Added C procrustes fit implementations
2024-11-06 Added C mrcal_R_aligned_to_vector()

2024-11-07 Added simple math operation functions to the C API

2024-11-27 bestq uncertainty method
  - works
  - needs documentation
  - MUCH slower than the mean-pcam, since it solves the linear problem (Nframes
    or Ncameras_extrinsics) more times than mean-pcam

* Migration notes 2.4 -> 3.0

* todo
- Old tools complain about new keywords:

  #+begin_example
mrcal-show-geometry --show-points /tmp/models-noisesample0-camera0.cameramodel
Traceback (most recent call last):
  File "/usr/bin/mrcal-show-geometry", line 186, in <module>
    plot = mrcal.show_geometry(models,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/mrcal/visualization.py", line 446, in show_geometry
    points = get_points_to_plot()
             ^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/mrcal/visualization.py", line 416, in get_points_to_plot
    mrcal.corresponding_icam_extrinsics(icam_intrinsics,
TypeError: 'do_apply_regularization_unity_cam01' is an invalid keyword argument for mrcal.corresponding_icam_extrinsics()
  #+end_example

- add notes about the triangulated-points merge

- new observed_pixel_uncertainty
  - apply sqrt() factor. Documented in 68789474. git grep -n
    observed_pixel_uncertainty ..
  - Does too little data give smaller residuals? It should. Is this reflected in
    the sqrt() factor?

- mrcal.cameramodel.extrinsics_rt_fromref (and friends): make aliases. I want
  mrcal.cameramodel.rt_cam_ref()

** triangulated features merge
*** =git grep -n Noutliers= Noutliers has change meaning: it's now =Nmeasurements_outliers=

   #+begin_src diff
   diff --git a/doc/c-api.org b/doc/c-api.org
   index 7d3c8939..2ae7d9d5 100644